--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <!-- Google tag (gtag.js) -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-C6ERVD5Y7X"></script>
+        <script>
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
+        
+          gtag('config', 'G-C6ERVD5Y7X');
+        </script>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=devide-width, initial-scale=1.0">
         <link rel="stylesheet" href="style.css">
